<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".ArticleDetailActivity">

    <LinearLayout
        android:id="@+id/linearLayoutEnTete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtNom"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/article" />

        <CheckBox
            android:id="@+id/chkActiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:clickable="false"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPrix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/prix" />

        <RatingBar
            android:id="@+id/rtbEnvie"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:isIndicator="true"
            android:numStars="4"
            android:rating="3.5" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="16dp"
            tools:text="@string/description" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnWeb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/internet_btn"
            android:onClick="onClickWeb"
            />

        <ToggleButton
            android:id="@+id/btnAcheter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/acheter"
            android:textOn="@string/acheter"
            android:textOff="@string/a_acheter"
            />
    </LinearLayout>

</LinearLayout>